--- a/app/src/main/res/layout/activity_info2.xml
+++ b/app/src/main/res/layout/activity_info2.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.hongbog.viewmodel.InfoViewModel"/>
+            type="com.hongbog.view.InfoViewModel"/>
     </data>
 
     <LinearLayout
