--- a/app/src/main/res/layout/fragment_camera_connection.xml
+++ b/app/src/main/res/layout/fragment_camera_connection.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"/>-->
 
-    <com.tzutalin.dlibtest.AutoFitTextureView
+    <com.hongbog.view.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
