--- a/app/src/main/res/layout/activity_result_test.xml
+++ b/app/src/main/res/layout/activity_result_test.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context=".MainActivity">
+    tools:context="com.hongbog.view.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
