--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -47,7 +47,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sir_text"
+        android:text="@string/sir"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintLeft_toLeftOf="@id/label_textview"
