--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -16,9 +16,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/check_identify" />
+        app:srcCompat="@drawable/identify_success" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         android:textStyle="bold"
         app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/check_identify_image" />
+        app:layout_constraintTop_toBottomOf="@id/check_identify_image" />-->
 
     <TextView
         android:id="@+id/label_textview"
@@ -37,13 +37,14 @@
         android:text="@string/label_result"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView5" />
+        app:layout_constraintTop_toBottomOf="@id/check_identify_image"
+        android:layout_marginTop="20dp"/>
     <!--colorPrimaryDark-->
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintLeft_toLeftOf="@id/label_textview"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView5" />
+        app:layout_constraintTop_toBottomOf="@id/textView5" />-->
 
     <include
         android:id="@+id/loading_layout"
