2018-08-29 at company SharedPreference를 사용하여 등록 라벨 저장 및 인식 로직 추가

--- a/app/src/main/res/layout/fragment_gforce.xml
+++ b/app/src/main/res/layout/fragment_gforce.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/ball_background_image_des"
         android:scaleType="fitXY"
-        android:src="@drawable/bg" />
+        android:background="@color/White"/>
 
     <ImageView
         android:id="@+id/grid"
