1. CheckQuality.java 안에 TextView에 들어갈 TEXT값 Strings.xml 리소스 에서 받아오도록 수정 2. 영문 버튼 이미지 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:background="@android:color/transparent"
         android:layout_marginBottom="20dp"
         android:scaleType="fitXY"
-        android:src="@drawable/verification"
+        android:src="@drawable/match_en_btn"
         app:layout_constraintBottom_toTopOf="@+id/enroll_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
-        android:src="@drawable/enroll"
+        android:src="@drawable/enroll_en_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
